# archetype-core-etl

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dags/common/: dag_defaults.py  serialization.py
dags/pipelines/: batch_pipeline_dag.py  streaming_pipeline_dag.py
infrastructure/terraform/: versions.tf
infrastructure/terraform/environments/dev/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/mwaa/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
scripts/: docker-entrypoint-init.sh  generate_data.py  init-db.sql  init-localstack.sh  setup-local.sh  update-databricks-tables.sql
src/archetype_core_etl/: __init__.py
src/archetype_core_etl/classify/: __init__.py  bedrock_classifier.py  cost_tracker.py  rate_limiter.py
src/archetype_core_etl/classify/prompts/: __init__.py  compliance_v1.txt
src/archetype_core_etl/common/: __init__.py  aws.py  dead_letter.py  exceptions.py  logging.py
src/archetype_core_etl/config/: __init__.py  settings.py
src/archetype_core_etl/extract/: __init__.py  kinesis_reader.py  s3_reader.py  schema.py
src/archetype_core_etl/load/: __init__.py  audit_writer.py  delta_writer.py
src/archetype_core_etl/transform/: __init__.py  normalizer.py  quality_gate.py
tests/: conftest.py
tests/unit/: test_cost_tracker.py  test_dead_letter.py  test_normalizer.py  test_prompt_versioning.py  test_quality_gate.py  test_rate_limiter.py  test_schema.py
tests/unit/tests/unit/: test_rate_limiter.py
