[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "archetype-core-etl"
version = "0.1.0"
description = "Production-grade ETL platform orchestrated by Airflow, powered by Databricks, provisioned by Terraform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Archetype Data Platform" },
]
keywords = ["etl", "airflow", "databricks", "data-engineering", "pipelines"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
dependencies = [
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "python-dotenv~=1.0",
    "python-json-logger~=2.0",
    "boto3~=1.34",
]

[project.optional-dependencies]
airflow = [
    # apache-airflow and provider packages added in later commits.
]
databricks = [
    # databricks-sdk, databricks-connect added in later commits.
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/marlungu/archetype-core-etl"
Repository = "https://github.com/marlungu/archetype-core-etl"
Issues = "https://github.com/marlungu/archetype-core-etl/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/archetype_core_etl"]

[tool.hatch.build.targets.sdist]
include = [
    "src/archetype_core_etl",
    "README.md",
    "pyproject.toml",
]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PL",  # pylint
    "RUF", # ruff-specific
    "S",   # flake8-bandit security checks
]
ignore = [
    "E501",  # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=archetype_core_etl",
    "--cov-report=term-missing",
]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that hit external systems",
    "slow: tests that take more than a second",
]

# ---------- Coverage ----------
[tool.coverage.run]
branch = true
source = ["src/archetype_core_etl"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
